[gd_scene load_steps=19 format=3 uid="uid://uo1kwvi8y2b5"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_203h7"]
[ext_resource type="PackedScene" uid="uid://bsctvuvu52rj4" path="res://scenes/player.tscn" id="2_6hri5"]
[ext_resource type="Texture2D" uid="uid://dbr83icllh5h" path="res://assets/custom/tiles.png" id="2_dcfdm"]
[ext_resource type="Texture2D" uid="uid://cylhjmuu86p6p" path="res://assets/custom/tiles_worldgen.png" id="4_3aqxr"]
[ext_resource type="Texture2D" uid="uid://br6e3rwehuatd" path="res://assets/custom/lawndaisy-tile2.png" id="4_tf13q"]
[ext_resource type="PackedScene" uid="uid://bbofrg2b4x3n0" path="res://scenes/enemy_spawner.tscn" id="5_ql2lg"]
[ext_resource type="Texture2D" uid="uid://dy37tdfymmvnq" path="res://assets/custom/yarrow-tile.png" id="6_qxu1e"]
[ext_resource type="Texture2D" uid="uid://cvg1v3bywuyj" path="res://assets/custom/highlight_tiles.png" id="6_y08n4"]
[ext_resource type="Script" path="res://scripts/flower_layer.gd" id="7_5h16x"]
[ext_resource type="Script" path="res://scripts/tile_map_layer_1.gd" id="7_lghf8"]

[sub_resource type="TileMapPattern" id="TileMapPattern_a8fio"]
tile_data = PackedInt32Array(0, 5, 0, 131072, 5, 0, 262144, 5, 0, 196609, 5, 0, 393217, 5, 0, 2, 5, 0, 131074, 5, 0, 262146, 5, 0, 262147, 5, 0, 393219, 5, 0, 524291, 5, 0, 4, 5, 0, 65540, 5, 0, 131076, 5, 0, 458756, 5, 0, 524292, 5, 0, 589829, 5, 0, 655365, 5, 0, 65542, 5, 0, 131078, 5, 0, 196614, 5, 0, 393222, 5, 0, 524294, 5, 0, 393223, 5, 0, 458759, 5, 0, 720903, 5, 0, 196616, 5, 0, 655369, 5, 0, 720905, 5, 0, 327690, 5, 0, 458762, 5, 0, 524298, 5, 0, 655370, 5, 0, 458763, 5, 0, 589835, 5, 0, 720907, 5, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_ndxeu"]
tile_data = PackedInt32Array(0, 2, 0, 131072, 2, 0, 262144, 2, 0, 393216, 2, 0, 458753, 2, 0, 524289, 2, 0, 2, 2, 0, 131074, 2, 0, 262146, 2, 0, 393218, 2, 0, 196611, 2, 0, 262147, 2, 0, 524291, 2, 0, 589827, 2, 0, 655363, 2, 0, 4, 2, 0, 131076, 2, 0, 262148, 2, 0, 393220, 2, 0, 131077, 2, 0, 524293, 2, 0, 655365, 2, 0, 720901, 2, 0, 786437, 2, 0, 6, 2, 0, 131078, 2, 0, 262150, 2, 0, 458758, 2, 0, 262151, 2, 0, 393223, 2, 0, 655367, 2, 0, 786439, 2, 0, 917511, 2, 0, 65544, 2, 0, 196616, 2, 0, 327688, 2, 0, 589832, 2, 0, 655368, 2, 0, 786440, 2, 0, 917512, 2, 0, 196617, 2, 0, 524297, 2, 0, 720905, 2, 0, 851977, 2, 0, 983049, 2, 0, 196618, 2, 0, 327690, 2, 0, 458762, 2, 0, 655370, 2, 0, 589835, 2, 0, 851979, 2, 0, 983051, 2, 0, 327692, 2, 0, 393228, 2, 0, 458764, 2, 0, 589836, 2, 0, 786444, 2, 0, 851980, 2, 0, 589837, 2, 0, 655373, 2, 0, 720909, 2, 0, 983053, 2, 0, 458766, 2, 0, 524302, 2, 0, 589839, 2, 0, 720911, 2, 0, 851983, 2, 0, 983055, 2, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_20ie1"]
texture = ExtResource("2_dcfdm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 8)
1:0/0/y_sort_origin = -14
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 8)
3:0/0/y_sort_origin = -14
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -8)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -8)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, -8)
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_corner = 0
6:0/0/terrains_peering_bit/bottom_right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/left_corner = 0
6:0/0/terrains_peering_bit/top_left_side = 0
6:0/0/terrains_peering_bit/top_left_corner = 0
6:0/0/terrains_peering_bit/top_side = 0
6:0/0/terrains_peering_bit/top_right_side = 0
6:0/0/terrains_peering_bit/top_right_corner = 0
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, -8)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -8)
6:1/0 = 0
6:1/0/texture_origin = Vector2i(0, -8)
6:1/0/custom_data_0 = 1
7:1/0 = 0
7:1/0/texture_origin = Vector2i(0, -8)
7:1/0/custom_data_0 = 1
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
0:2/0/terrain_set = 0
0:2/0/terrains_peering_bit/right_corner = 0
0:2/0/terrains_peering_bit/bottom_right_side = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/top_right_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
1:2/0/terrain_set = 0
1:2/0/terrains_peering_bit/right_corner = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)
2:2/0/terrain_set = 0
2:2/0/terrains_peering_bit/left_corner = 0
2:2/0/terrains_peering_bit/top_left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -8)
3:3/0/terrain_set = 0
3:3/0/terrains_peering_bit/right_corner = 0
3:3/0/terrains_peering_bit/bottom_right_side = 0
3:3/0/terrains_peering_bit/bottom_right_corner = 0
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/bottom_left_side = 0
3:3/0/terrains_peering_bit/bottom_left_corner = 0
3:3/0/terrains_peering_bit/left_corner = 0
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, -8)
4:3/0/terrain_set = 0
4:3/0/terrains_peering_bit/left_corner = 0
4:3/0/terrains_peering_bit/top_left_side = 0
4:3/0/terrains_peering_bit/top_left_corner = 0
6:3/0 = 0
6:3/0/texture_origin = Vector2i(0, -8)
6:3/0/terrain_set = 0
6:3/0/terrains_peering_bit/right_corner = 0
6:3/0/terrains_peering_bit/top_right_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
6:2/0 = 0
6:2/0/texture_origin = Vector2i(0, -8)
6:2/0/terrain_set = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_corner = 0
6:2/0/terrains_peering_bit/top_left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0 = 0
7:2/0/texture_origin = Vector2i(0, -8)
7:2/0/terrain_set = 0
7:2/0/terrains_peering_bit/bottom_left_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_corner = 0
7:2/0/terrains_peering_bit/top_left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
7:2/0/terrains_peering_bit/top_right_corner = 0
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, -8)
4:2/0/terrain_set = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/bottom_left_side = 0
4:2/0/terrains_peering_bit/bottom_left_corner = 0
4:2/0/terrains_peering_bit/left_corner = 0
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
3:2/0/terrain_set = 0
3:2/0/terrains_peering_bit/bottom_left_side = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/left_corner = 0
3:2/0/terrains_peering_bit/top_left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
7:3/0 = 0
7:3/0/texture_origin = Vector2i(0, -8)
7:3/0/terrain_set = 0
7:3/0/terrains_peering_bit/right_corner = 0
7:3/0/terrains_peering_bit/bottom_right_side = 0
7:3/0/terrains_peering_bit/bottom_right_corner = 0
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -8)
2:3/0/terrain_set = 0
2:3/0/terrains_peering_bit/right_corner = 0
2:3/0/terrains_peering_bit/bottom_right_side = 0
2:3/0/terrains_peering_bit/bottom_right_corner = 0
2:3/0/terrains_peering_bit/bottom_side = 0
2:3/0/terrains_peering_bit/bottom_left_corner = 0
2:3/0/terrains_peering_bit/top_right_side = 0
2:3/0/terrains_peering_bit/top_right_corner = 0
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -8)
1:3/0/terrain_set = 0
1:3/0/terrains_peering_bit/right_corner = 0
1:3/0/terrains_peering_bit/bottom_right_side = 0
1:3/0/terrains_peering_bit/bottom_right_corner = 0
1:3/0/terrains_peering_bit/top_left_corner = 0
1:3/0/terrains_peering_bit/top_side = 0
1:3/0/terrains_peering_bit/top_right_side = 0
1:3/0/terrains_peering_bit/top_right_corner = 0
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -8)
0:3/0/terrain_set = 0
0:3/0/terrains_peering_bit/right_corner = 0
0:3/0/terrains_peering_bit/left_corner = 0
0:3/0/terrains_peering_bit/top_left_side = 0
0:3/0/terrains_peering_bit/top_left_corner = 0
0:3/0/terrains_peering_bit/top_side = 0
0:3/0/terrains_peering_bit/top_right_side = 0
0:3/0/terrains_peering_bit/top_right_corner = 0
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -8)
0:4/0/terrain_set = 0
0:4/0/terrains_peering_bit/bottom_right_corner = 0
0:4/0/terrains_peering_bit/bottom_side = 0
0:4/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -8)
5:1/0/custom_data_0 = 1
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -8)
5:2/0/terrain_set = 0
5:2/0/terrains_peering_bit/right_corner = 0
5:2/0/terrains_peering_bit/bottom_right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, -8)
5:3/0/terrain_set = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
5:3/0/terrains_peering_bit/top_right_corner = 0
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, -8)
5:4/0/terrain_set = 0
5:4/0/terrains_peering_bit/right_corner = 0
5:4/0/terrains_peering_bit/bottom_right_side = 0
5:4/0/terrains_peering_bit/bottom_right_corner = 0
5:4/0/terrains_peering_bit/left_corner = 0
5:4/0/terrains_peering_bit/top_left_side = 0
5:4/0/terrains_peering_bit/top_left_corner = 0
5:4/0/terrains_peering_bit/top_side = 0
5:4/0/terrains_peering_bit/top_right_side = 0
5:4/0/terrains_peering_bit/top_right_corner = 0
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -8)
1:4/0/terrain_set = 0
1:4/0/terrains_peering_bit/bottom_left_side = 0
1:4/0/terrains_peering_bit/bottom_left_corner = 0
1:4/0/terrains_peering_bit/left_corner = 0
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, -8)
2:4/0/terrain_set = 0
2:4/0/terrains_peering_bit/right_corner = 0
2:4/0/terrains_peering_bit/bottom_right_side = 0
2:4/0/terrains_peering_bit/bottom_right_corner = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/bottom_left_side = 0
2:4/0/terrains_peering_bit/bottom_left_corner = 0
2:4/0/terrains_peering_bit/left_corner = 0
2:4/0/terrains_peering_bit/top_left_side = 0
2:4/0/terrains_peering_bit/top_left_corner = 0
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, -8)
3:4/0/terrain_set = 0
3:4/0/terrains_peering_bit/bottom_right_corner = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/bottom_left_side = 0
3:4/0/terrains_peering_bit/bottom_left_corner = 0
3:4/0/terrains_peering_bit/left_corner = 0
3:4/0/terrains_peering_bit/top_left_side = 0
3:4/0/terrains_peering_bit/top_left_corner = 0
3:4/0/terrains_peering_bit/top_side = 0
3:4/0/terrains_peering_bit/top_right_corner = 0
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, -8)
4:4/0/terrain_set = 0
4:4/0/terrains_peering_bit/right_corner = 0
4:4/0/terrains_peering_bit/bottom_left_side = 0
4:4/0/terrains_peering_bit/bottom_left_corner = 0
4:4/0/terrains_peering_bit/left_corner = 0
4:4/0/terrains_peering_bit/top_left_side = 0
4:4/0/terrains_peering_bit/top_left_corner = 0
4:4/0/terrains_peering_bit/top_side = 0
4:4/0/terrains_peering_bit/top_right_side = 0
4:4/0/terrains_peering_bit/top_right_corner = 0
6:4/0 = 0
6:4/0/texture_origin = Vector2i(0, -8)
6:4/0/terrain_set = 0
6:4/0/terrains_peering_bit/right_corner = 0
6:4/0/terrains_peering_bit/bottom_right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/bottom_left_corner = 0
6:4/0/terrains_peering_bit/top_left_corner = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
7:4/0 = 0
7:4/0/texture_origin = Vector2i(0, -8)
7:4/0/terrain_set = 0
7:4/0/terrains_peering_bit/right_corner = 0
7:4/0/terrains_peering_bit/bottom_right_side = 0
7:4/0/terrains_peering_bit/bottom_right_corner = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/bottom_left_side = 0
7:4/0/terrains_peering_bit/bottom_left_corner = 0
7:4/0/terrains_peering_bit/left_corner = 0
7:4/0/terrains_peering_bit/top_right_side = 0
7:4/0/terrains_peering_bit/top_right_corner = 0
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, -8)
4:1/0/custom_data_0 = 1
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
3:1/0/custom_data_0 = 1
0:5/size_in_atlas = Vector2i(1, 2)
0:5/0 = 0
0:5/0/texture_origin = Vector2i(0, 24)
0:5/0/y_sort_origin = 1
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jb6ev"]
texture = ExtResource("4_tf13q")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 1)
0:0/0/z_index = 1
0:0/0/y_sort_origin = -10
0:0/0/custom_data_0 = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uxnxl"]
texture = ExtResource("4_3aqxr")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
0:0/0/z_index = -2
0:0/0/custom_data_0 = 1
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
1:0/0/z_index = -2
1:0/0/custom_data_0 = 1
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
2:0/0/z_index = -2
2:0/0/custom_data_0 = 1
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
3:0/0/z_index = -2
3:0/0/custom_data_0 = 1
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -8)
5:0/0/z_index = -2
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
0:1/0/z_index = -2
0:1/0/custom_data_0 = 1
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
1:1/0/z_index = -2
1:1/0/custom_data_0 = 1
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -8)
2:1/0/z_index = -2
2:1/0/custom_data_0 = 1
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
3:1/0/z_index = -2
3:1/0/custom_data_0 = 1
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -8)
5:1/0/z_index = -2
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
0:2/0/z_index = -2
0:2/0/custom_data_0 = 1
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
1:2/0/z_index = -2
1:2/0/custom_data_0 = 1
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)
2:2/0/z_index = -2
2:2/0/custom_data_0 = 1
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
3:2/0/z_index = -2
3:2/0/custom_data_0 = 1
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -8)
5:2/0/z_index = -2
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -8)
0:3/0/z_index = -2
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -8)
1:3/0/z_index = -2
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -8)
2:3/0/z_index = -2
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -8)
3:3/0/z_index = -2
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, -8)
5:3/0/z_index = -2
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, -8, -8, 8, -8, 16, 0, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1elyc"]
texture = ExtResource("6_y08n4")
texture_region_size = Vector2i(32, 23)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -3)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k4pyn"]
texture = ExtResource("6_qxu1e")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 1)
0:0/0/z_index = 1
0:0/0/y_sort_origin = -10
0:0/0/custom_data_0 = 3

[sub_resource type="TileSet" id="TileSet_kfax7"]
tile_shape = 3
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Water"
terrain_set_0/terrain_0/color = Color(0.227128, 0.344169, 0.7466, 1)
custom_data_layer_0/name = "flora"
custom_data_layer_0/type = 2
sources/2 = SubResource("TileSetAtlasSource_jb6ev")
sources/0 = SubResource("TileSetAtlasSource_20ie1")
sources/4 = SubResource("TileSetAtlasSource_1elyc")
sources/5 = SubResource("TileSetAtlasSource_k4pyn")
sources/3 = SubResource("TileSetAtlasSource_uxnxl")
pattern_0 = SubResource("TileMapPattern_a8fio")
pattern_1 = SubResource("TileMapPattern_ndxeu")

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(3556, 2649)
script = ExtResource("1_203h7")

[node name="TileMapLayer1" type="TileMapLayer" parent="."]
z_as_relative = false
y_sort_enabled = true
tile_set = SubResource("TileSet_kfax7")
script = ExtResource("7_lghf8")

[node name="FlowerLayer" type="TileMapLayer" parent="."]
z_as_relative = false
y_sort_enabled = true
tile_set = SubResource("TileSet_kfax7")
script = ExtResource("7_5h16x")

[node name="TreeLayer" type="TileMapLayer" parent="."]
z_index = 1
z_as_relative = false
y_sort_enabled = true
tile_set = SubResource("TileSet_kfax7")

[node name="FlowerGroupLayer" type="TileMapLayer" parent="."]
z_index = 3
z_as_relative = false
y_sort_enabled = true
tile_set = SubResource("TileSet_kfax7")

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_6hri5")]
position = Vector2(15, 10)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="Hives" type="Node2D" parent="."]
y_sort_enabled = true

[node name="GhostCursors" type="Node" parent="."]

[node name="EnemySpawner" parent="." instance=ExtResource("5_ql2lg")]
